# user-service

./: Cargo.toml
src/: index.rs  lib.rs  main.rs
src/event/: event_models.rs  traits.rs
src/set_up_databse/: connection.rs  keyspace.rs  table.rs
src/user_service_api/: models.rs  user_service_impl.rs
